--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,8 +1,9 @@
+
 <main>
   <p id="notice"></p>
   <div class="container">
     <div class="row">
-
+      <div class="col-sm-12 col-md-8 col-ig-5 px-5 px-sm-0 mx-auto">
 
 
 
