--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>NaganoCake</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -12,7 +13,8 @@
 
   <body class="d-flex flex-column vh-100">
   <header class="shadow-sm">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">LOGO</a>
       <div class="container">
 
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -23,11 +25,65 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
 
+            <%= link_to admin_about_path, class: 'nav-link text-dark' do %>
+
+              About
+
+            <% end %>
+
+
+            <%= link_to admin_customers_index_path, class: 'nav-link text-dark' do %>
+
+              商品一覧
+
+            <% end %>
+
+
+            <%= link_to admin_items_new_path, class: 'nav-link text-dark' do %>
+
+              新規登録
+
+            <% end %>
+
+
+            <%= link_to admin_items_new_path, class: 'nav-link text-dark' do %>
+
+              新規登録
+
+            <% end %>
+
+
+            <%= link_to new_admin_session_path, class: 'nav-link text-dark' do %>
+
+              ログイン
+
+            <% end %>
+
+          
+            <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+
+    </form>
 
 
 
 
-  <body>
+
+            </ul>
+          </div>
+      </div>
+    </nav>
+   </header>
+
+
+
+
+
+
+  <main>
     <%= yield %>
+  </main>
   </body>
 </html>
+
+
