--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,44 +27,47 @@
 
             <%= link_to admin_about_path, class: 'nav-link text-dark' do %>
 
-              About
+            <p class="border rounded">About</p>
 
             <% end %>
 
 
             <%= link_to admin_customers_index_path, class: 'nav-link text-dark' do %>
 
-              商品一覧
+            <p class="border rounded">商品一覧</p>
 
             <% end %>
 
 
             <%= link_to admin_items_new_path, class: 'nav-link text-dark' do %>
 
-              新規登録
+              <p class="border rounded">新規登録</p>
 
             <% end %>
 
 
             <%= link_to admin_items_new_path, class: 'nav-link text-dark' do %>
 
-              新規登録
+              <p class="border rounded">新規登録</p>
 
             <% end %>
 
 
             <%= link_to new_admin_session_path, class: 'nav-link text-dark' do %>
 
-              ログイン
+              <p class="border rounded">ログイン</p>
 
             <% end %>
 
-
+          <div>
             <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 
 
+
+
     </form>
+          </div>
 
 
 
