--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,18 +1,18 @@
 
 <main>
   <p id="notice"></p>
-  <div class="container text-center">
-    <div class="row">
-      <div class="col">
-
-
-<%= form_with model: @genre do |f| %>
-
   <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">ジャンル編集</div>
+　　</div>
+
+  <%= form_with model: @genre do |f| %>
+
+<div class="container text-center">
     <div class="row">
 
       <div class="col-2">
-        商品名
+        ジャンル名
       </div>
 
       <div class="col-2">
@@ -20,55 +20,10 @@
       </div>
 
 
-  <div class="container">
-    <div class="row">
-
-      <div class="col-2">
-        商品説明
-      </div>
-
-      <div class="col-2">
-      <%= f.text_area :introduction %>
-      </div>
+　<div class="col-2">
 
 
-  <div class="container">
-    <div class="row">
+  <div><%= link_to "変更を保存", admin_genres_index_path, class: "btn btn-success" %></div>
+  </div>
 
-      <div class="col-2">
-        ジャンル
-      </div>
-
-      <div class="col-2">
-      <%= f.text_field :name %>
-      </div>
-
-
-  <div class="container">
-    <div class="row">
-
-      <div class="col-2">
-        税抜価格
-      </div>
-
-      <div class="col-2">
-      <%= f.text_field :price %>
-      </div>
-
-      <div class="container">
-    <div class="row">
-       <div class="col-6">
-
-
-
-      <div class="form-check">
-  <input class="form-check-input" type="radio" id="radio_1_1" name="radio_1" value="1" checked>
-  <label class="form-check-label" for="radio_1_1">Red</label>
-</div>
-
-
-
-
-
-
- <% end %>
+  <% end %>
