--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -14,7 +14,7 @@
 
 
 
-      <%= form_with model: @genre,url: admin_genres_path do |f| %>
+    <%= form_with model: @genre,url: admin_genres_path do |f| %>
 
     <div class="container text-center">
     <div class="row">
@@ -59,7 +59,7 @@
       <tr>
 
       <td><%= genre.name %></td>
-      <td><%= link_to "編集する", admin_genres_edit_path(genre.id), class: "btn btn-sm btn-success" %></td>
+      <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-sm btn-success" %></td>
       </tr>
     <% end %>
   </tbody>
