--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,21 +32,15 @@
             <% end %>
 
 
-            <%= link_to admin_customers_index_path, class: 'nav-link text-dark' do %>
+            <%= link_to admin_items_path, class: 'nav-link text-dark' do %>
 
             <p class="border rounded">商品一覧</p>
 
             <% end %>
 
 
-            <%= link_to admin_items_new_path, class: 'nav-link text-dark' do %>
 
-              <p class="border rounded">新規登録</p>
-
-            <% end %>
-
-
-            <%= link_to admin_items_new_path, class: 'nav-link text-dark' do %>
+            <%= link_to new_admin_item_path, class: 'nav-link text-dark' do %>
 
               <p class="border rounded">新規登録</p>
 
