[Add]kaminari機能など追加

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -24,7 +24,7 @@
 
     </td>
 
-    <td><%= item.name %></td>
+    <td><%= link_to item.name, admin_item_path(item.id) %></td>
     <td><%= item.price %></td>
     <td></td>
     <td><%= item.is_active %></td>
