--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -11,14 +11,11 @@
 
   <div class="container">
     <div class="row justify-content-center">
-
-
       <div class="col-2">
         商品画像
       </div>
-
       <div class="col-2">
-      <%= f.file_field :image, accept: "image/*" %>
+        <%= f.file_field :image, accept: "image/*" %>
       </div>
 
 
@@ -26,11 +23,9 @@
 
   <div class="container">
     <div class="row mt-3 justify-content-center">
-
       <div class="col-2">
         商品名
       </div>
-
       <div class="col-2">
       <%= f.text_field :name, placeholder: "商品名" %>
       </div>
@@ -39,23 +34,19 @@
 
   <div class="container">
     <div class="row mt-2 justify-content-center">
-
       <div class="col-2">
         商品説明
       </div>
-
       <div class="col-2">
-      <%= f.text_area :introduction, placeholder: "ここに説明文を記述します"%>
+        <%= f.text_area :introduction, placeholder: "ここに説明文を記述します"%>
       </div>
 
 
   <div class="container">
     <div class="row mt-2 justify-content-center">
-
       <div class="col-2">
         ジャンル
       </div>
-
       <div class="col-2">
       <%= f.select :name, ['ケーキ', 'クッキー', 'プリン'], {include_blank: '--選択してください--'}, class: 'sample' %>
       </div>
@@ -63,45 +54,33 @@
 
   <div class="container">
     <div class="row mt-2 justify-content-center">
-
       <div class="col-2">
         税抜価格
       </div>
-
       <div class="col-2">
       <%= f.text_field :price, placeholder: "1000"%>
       </div>
 
       <div class="container">
       <div class="row mt-2 justify-content-center">
-
       <div class="col-2">
         販売ステータス
       </div>
-
-    <div class="form-check">
-  <input type="radio" class="form-check-input" name="formRadioDefault" id="formRadioDefault1">
-  <label for="formRadioDefault1" class="form-check-label">
-    販売中
-  </label>
-  </div>
-
-  <div class="form-check">
-  <input type="radio" class="form-check-input" name="formRadioDefault" id="formRadioDefault2" checked>
-  <label for="formRadioDefault2" class="form-check-label">
-    販売停止中
-  </label>
-  </div>
+    <%= form_with model: @item, local: true do |f| %>
+      <%= f.radio_button :checked, :true %>
+      <%= f.label :checked, "販売中" %><br />
+      <%= f.radio_button :checked, :false %>
+      <%= f.label :checked, "販売停止中" %><br />
+    <% end %>
 
 
-  <div class="container">
+    <div class="container">
       <div class="row mt-2 justify-content-center">
-
       <div class="col">
 
-<div><%= f.submit "変更を保存", class: "btn btn-success" %></div>
+      <div><%= f.submit "変更を保存", class: "btn btn-success" %></div>
 
 
-</div>
+      </div>
 
 <% end %>
