[Add]管理者トップページ等追加編集

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -19,21 +19,15 @@
 
     <tbody>
     <% @items.each do |item| %>
-      <tr>
-    <td>
-
-    </td>
-
-    <td><%= link_to item.name, admin_item_path(item.id) %></td>
-    <td><%= item.price %></td>
-    <td></td>
-    <td><%= item.is_active %></td>
-
-
-
-
-
-
+    <tr>
+      <td><%= item.items_id %></td>
+      <td><%= link_to item.name, admin_item_path(item.id) %></td>
+      <td><%= item.price %></td>
+      <td><%= item.genre_id %></td>
+      <td><%= item.is_active %></td>
+    </tr>
 
     <% end %>
     </tbody>
+
+    </table>
