--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,9 @@
             <% end %>
 
           <div>
+
+
+
             <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 
@@ -62,15 +65,6 @@
 
     </form>
           </div>
-
-
-
-
-
-
-
-
-
             </ul>
           </div>
       </div>
@@ -87,5 +81,9 @@
   </main>
   </body>
 </html>
+
+        <footer>
+
+          </footer>
 
 
