--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,18 @@
-<h1>admin topページ</h1>
+<main>
+  <p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">注文履歴一覧</div>
+　　</div>
+
+
+　　<table class="table">
+    <thead>
+      <tr>
+        <th>購入日時</th>
+        <th>購入者</th>
+        <th>注文個数</th>
+        <th>注文ステータス</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
