--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,6 +1,26 @@
-<main>
+
   <p id="notice"></p>
   <div class="container text-center">
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">商品詳細</div>
 　　</div>
+　</div>
+
+
+　<%= form_with model: @item, url: admin_items_path do |f| %>
+　
+　
+  <div class="container">
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        商品名
+      </div>
+      <div class="col-2">
+      <%= f.text_field :name, placeholder: "商品名" %>
+      </div>
+　
+　
+
+
+
+　<% end %>
