[Add]商品詳細作成

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -71,7 +71,7 @@
       <div><%= f.label :is_active, "販売中" %><br /></div>
 
       <div><%= f.radio_button :is_active, :false %></div>
-      <div><%= f.label :cis_active, "販売停止中" %><br /></div>
+      <div><%= f.label :is_active, "販売停止中" %><br /></div>
 
 
 
@@ -83,5 +83,7 @@
 
 
       </div>
+      </div>
+    </div>
 
 <% end %>
