--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -23,7 +23,7 @@
       <td><%= item.items_id %></td>
       <td><%= link_to item.name, admin_item_path(item.id) %></td>
       <td><%= item.price %></td>
-      <td><%= item.genre_id %></td>
+      <td><%= item.genre.name %></td>
       <td><%= item.is_active %></td>
     </tr>
 
