--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -11,12 +11,10 @@
 
 
 
-      <div><%= image_tag @item.image %></div>
+  <%= image_tag @item.image %>
 
 
-
-
-    <div class="container">
+  <div class="container">
     <div class="row mt-3 justify-content-center">
       <div class="col-2">
         商品名
@@ -24,8 +22,10 @@
       <div class="col-2">
         <%= @item.name %>
       </div>
+    </div>
+  </div>
 
-      <div class="container">
+  <div class="container">
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
         商品説明
@@ -33,47 +33,56 @@
       <div class="col-2">
         <%= @item.introduction %>
       </div>
+    </div>
+  </div>
 
 
-      <div class="container">
+  <div class="container">
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
         ジャンル
       </div>
       <div class="col-2">
-        <%= @item.genre_id %>
+        <%= @item.genre.name %>
       </div>
+    </div>
+  </div>
 
-      <div class="container">
+  <div class="container">
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
         税抜価格
       </div>
       <div class="col-2">
-      <%= @item.price %>
+        <%= @item.price %>
       </div>
+    </div>
+  </div>
 
-       <div class="container">
-      <div class="row mt-2 justify-content-center">
+
+  <div class="container">
+    <div class="row mt-2 justify-content-center">
       <div class="col-2">
         販売ステータス
       </div>
       <div class="col-2">
-      <%= @item.is_active %>
+        <% if @item.is_active == true %>
+          販売中
+        <% else %>
+          販売停止中
+        <% end %>
       </div>
+    </div>
+  </div>
 
 
-      <div class="container">
-      <div class="row mt-2 justify-content-center">
+  <div class="container">
+    <div class="row mt-2 justify-content-center">
       <div class="col-2">
-
       <div><%= f.submit "編集する", class: "btn btn-success" %></div>
-
       </div>
-      </div>
-      </div>
-
-
+    </div>
+  </div>
 
 
 　<% end %>
