--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,106 +1,88 @@
-<main>
-  <p id="notice"></p>
+
+   <p id="notice"></p>
   <div class="container text-center">
     <div class="row">
-      <div class="col">
+      <div class="p-3 mb-2 bg-secondary text-light">商品編集</div>
+　　</div>
 
 
-<%= form_with model: @item do |f| %>
+<%= form_with model: @item, url: edit_admin_item_path do |f| %>
 
 
   <div class="container">
-    <div class="row">
-
+    <div class="row justify-content-center">
       <div class="col-2">
         商品画像
       </div>
-
       <div class="col-2">
-      <%= f.text_field :introduction %>
+        <%= f.file_field :image, accept: "image/*" %>
       </div>
 
-  <div class="container">
-    <div class="row">
 
+
+
+  <div class="container">
+    <div class="row mt-3 justify-content-center">
       <div class="col-2">
         商品名
       </div>
-
       <div class="col-2">
-      <%= f.text_field :name %>
+      <%= f.text_field :name, placeholder: "商品名" %>
       </div>
 
 
-  <div class="container">
-    <div class="row">
 
+  <div class="container">
+    <div class="row mt-2 justify-content-center">
       <div class="col-2">
         商品説明
       </div>
-
       <div class="col-2">
-      <%= f.text_area :introduction %>
+        <%= f.text_area :introduction, placeholder: "ここに説明文を記述します"%>
       </div>
 
 
   <div class="container">
-    <div class="row">
-
+    <div class="row mt-2 justify-content-center">
       <div class="col-2">
         ジャンル
       </div>
-
       <div class="col-2">
-      <%= f.text_field :name %>
+      <%= f.collection_select :genre_id, Genre.all, :id, :name, {include_blank: '--選択してください--'}, class: 'sample' %>
       </div>
 
 
   <div class="container">
-    <div class="row">
-
+    <div class="row mt-2 justify-content-center">
       <div class="col-2">
         税抜価格
       </div>
-
       <div class="col-2">
-      <%= f.text_field :price %>
+      <%= f.text_field :price, placeholder: "1000"%>
       </div>
 
       <div class="container">
-      <div class="row">
-
+      <div class="row mt-2 justify-content-center">
       <div class="col-2">
         販売ステータス
       </div>
 
-    <div class="form-check">
-  <input type="radio" class="form-check-input" name="formRadioDefault" id="formRadioDefault1">
-  <label for="formRadioDefault1" class="form-check-label">
-    販売中
-  </label>
+      <div><%= f.radio_button :is_active, :true %></div>
+      <div><%= f.label :is_active, "販売中" %><br /></div>
+
+      <div><%= f.radio_button :is_active, :false %></div>
+      <div><%= f.label :is_active, "販売停止中" %><br /></div>
 
 
 
-  <div class="form-check">
-  <input type="radio" class="form-check-input" name="formRadioDefault" id="formRadioDefault2" checked>
-  <label for="formRadioDefault2" class="form-check-label">
-    販売停止中
-  </label>
-</div>
-
-
-
- <div class="container">
-      <div class="row">
-
+    <div class="container">
+      <div class="row mt-2 justify-content-center">
       <div class="col">
 
-<div><%= link_to "変更を保存", admin_top_path, class: "btn btn-success" %></div>
+      <div><%= f.submit "変更を保存", class: "btn btn-success" %></div>
+      <% end %>
 
+      </div>
+      </div>
+    </div>
 
-</div>
-
-
-
-
- <% end %>
