--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,4 +1,4 @@
-<main>
+
   <p id="notice"></p>
   <div class="container text-center">
     <div class="row">
@@ -79,7 +79,7 @@
       <div class="row mt-2 justify-content-center">
       <div class="col">
 
-      <div><%= f.submit "変更を保存", class: "btn btn-success" %></div>
+      <div><%= f.submit "新規登録", class: "btn btn-success" %></div>
 
 
       </div>
