--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -79,7 +79,7 @@
   <div class="container">
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
-      <div><%= f.submit "編集する", class: "btn btn-success" %></div>
+      <div><%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-sm btn-success" %></div>
       </div>
     </div>
   </div>
