--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -20,11 +20,16 @@
     <tbody>
     <% @items.each do |item| %>
     <tr>
-      <td><%= item.items_id %></td>
+      <td><%= item.id %></td>
       <td><%= link_to item.name, admin_item_path(item.id) %></td>
       <td><%= item.price %></td>
       <td><%= item.genre.name %></td>
-      <td><%= item.is_active %></td>
+      <td><% if item.is_active == true %>
+          販売中
+        <% else %>
+          販売停止中
+        <% end %>
+      </td>
     </tr>
 
     <% end %>
