--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -6,7 +6,7 @@
 　　</div>
 
 
-<%= form_with model: @item, url: edit_admin_item_path do |f| %>
+<%= form_with model: @item, url: admin_item_path do |f| %>
 
 
   <div class="container">
