[Add]会員情報画面作成

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+ <p id="notice"></p>
+  <div class="container text-center">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">会員情報編集</div>
+　　</div>
+
+　　<%= form_with model: @customer, url: admin_customer_path do |f| %>
+
+
+
+
+
+
+
+
+
+　　<% end %>
