--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<p id="notice"></p>
+  <div class="container text-center">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">会員一覧</div>
+　　</div>
+
+
+　　<table class="table">
+    <thead>
+      <tr>
+        <th>会員ID</th>
+        <th>氏名</th>
+        <th>メールアドレス</th>
+        <th>ステータス</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+  <tbody>
+    <% @customers.each do |customer| %>
+    <tr>
+      <td><%= customer.id %></td>
+      <td><%= link_to customer.name, admin_customer_path(customer.id) %></td>
+      <td><%= customer.email %></td>
+      <td><% if item.is_deleted == false %>
+          有効
+        <% else %>
+          退会
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+  </table>
+
+
+
+</div>
