--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -4,12 +4,81 @@
       <div class="p-3 mb-2 bg-secondary text-light">会員情報編集</div>
 　　</div>
 
-　　<%= form_with model: @customer, url: admin_customer_path do |f| %>
+    <tbody>
+　　<% @customers.each do |customer| %>
+　　<tr>
+     <td><%= customer.id %></td>
+    </tr>
 
+    <%= form_with model: @customer, url: admin_customer_path do |f| %>
 
+    <div class="container">
+     <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        氏名
+      </div>
+      <div class="col-2">
+      <%= f.text_field :last_name, placeholder: "姓" %>
+      <%= f.text_field :first_name, placeholder: "名" %>
+      </div>
+     </div>
+   </div>
 
+    <div class="container">
+     <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        フリガナ
+      </div>
+      <div class="col-2">
+      <%= f.text_field :last_name_kana, placeholder: "姓カナ" %>
+      <%= f.text_field :first_name_kana, placeholder: "名カナ" %>
+      </div>
+     </div>
+   </div>
 
+    <div class="container">
+     <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        郵便番号
+      </div>
+      <div class="col-2">
+      <%= f.text_field :Postal_cade %>
+      </div>
+     </div>
+   </div>
 
+    <div class="container">
+     <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        住所
+      </div>
+      <div class="col-2">
+      <%= f.text_field :address %>
+      </div>
+     </div>
+   </div>
+
+    <div class="container">
+     <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        メールアドレス
+      </div>
+      <div class="col-2">
+      <%= f.text_field :telephone_number %>
+      </div>
+     </div>
+   </div>
+
+    <div class="container">
+     <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+       会員ステータス
+      </div>
+      <div class="col-2">
+
+      </div>
+     </div>
+   </div>
 
 
 
