--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -25,9 +25,9 @@
       <td><%= item.price %></td>
       <td><%= item.genre.name %></td>
       <td><% if item.is_active == true %>
-          販売中
+        <p class="text-success">販売中</p>
         <% else %>
-          販売停止中
+        <p class="text-secondary">販売停止中</p>
         <% end %>
       </td>
     </tr>
