--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,40 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<p id="notice"></p>
+  <div class="container text-center">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">注文履歴詳細</div>
+　　</div>
+
+
+
+
+
+
+
+　　　<table class="table">
+    <thead>
+      <tr>
+        <th>商品名</th>
+        <th>単位(税込)</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th>制作ステータス</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    
+    <tbody>
+    <% @orders.each do |order| %>
+    <tr>
+      <td><%= order.name %></td>
+      
+      
+      
+    </tr>
+    
+    
+    </tbody>
+    
+    
+    
+    
+    
