--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -5,7 +5,68 @@
 　　</div>
 
 
+  <%= form_with model: @order, url: admin_orders_path do |f| %>
 
+  <div class="container">
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        購入者
+      </div>
+      <div class="col-2">
+        <%=  %>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        注文日
+      </div>
+      <div class="col-2">
+        <%= %>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        配送先
+      </div>
+      <div class="col-2">
+        <%= @order.postal_cade %>
+        <%= @order.address %>
+        <%= @order.name %>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        支払方法
+      </div>
+      <div class="col-2">
+        <%= @order.payment_method %>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        注文ステータス
+      </div>
+      <div class="col-2">
+        <%= @order.status %>
+      </div>
+    </div>
+  </div>
+
+
+
+  <% end %>
 
 
 
@@ -21,20 +82,25 @@
         <th colspan="3"></th>
       </tr>
     </thead>
-    
+
     <tbody>
-    <% @orders.each do |order| %>
+    <% @order_details.each do |order| %>
     <tr>
-      <td><%= order.name %></td>
-      
-      
-      
+      <td></td>
+      <td><%= order_deails.price %></td>
+      <td><%= order.amount %></td>
+      <td></td>
+      <td></td>
+
+
+
+
     </tr>
-    
-    
+
+
     </tbody>
-    
-    
-    
-    
-    
+
+
+
+
+
