[Add]ログイン機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,80 +24,73 @@
 
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
+
               <% if admin_signed_in? %>
 
-            <%= link_to admin_about_path(admin_user.id), class: 'nav-link text-dark' do %>
-
-            <p class="border rounded">About</p>
-
-            <% end %>
-
-
             <%= link_to admin_items_path, class: 'nav-link text-dark' do %>
-
-            <p class="border rounded">商品一覧</p>
-
+              <p class="border rounded">商品一覧</p>
             <% end %>
 
 
-
-            <%= link_to new_admin_item_path, class: 'nav-link text-dark' do %>
-
-              <p class="border rounded">新規登録</p>
-
+            <%= link_to admin_customers_path, class: 'nav-link text-dark' do %>
+              <p class="border rounded">会員一覧</p>
             <% end %>
 
 
-            <%= link_to new_admin_session_path, class: 'nav-link text-dark' do %>
-
-              <p class="border rounded">ログイン</p>
-
+            <%= link_to admin_top_path, class: 'nav-link text-dark' do %>
+              <p class="border rounded">注文履歴一覧</p>
             <% end %>
+
+
+            <%= link_to admin_genres_index_path, class: 'nav-link text-dark' do %>
+              <p class="border rounded">ジャンル一覧</p>
+            <% end %>
+
+            <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' do %>
+              <p class="border rounded">ログアウト</p>
+            <% end %>
+
+
 
           <div>
 
-            <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-
-          <% end %>
-
-
+           <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            </input>
+          </form>
 
 
+        <% elsif customer_signed_in? %>
+
+        <% else %>
 
 
             <%= link_to admin_about_path, class: 'nav-link text-dark' do %>
-
-            <p class="border rounded">About</p>
-
+              <p class="border rounded">About</p>
             <% end %>
 
 
             <%= link_to admin_items_path, class: 'nav-link text-dark' do %>
-
-            <p class="border rounded">商品一覧</p>
-
+              <p class="border rounded">商品一覧</p>
             <% end %>
 
 
-
             <%= link_to new_admin_item_path, class: 'nav-link text-dark' do %>
-
               <p class="border rounded">新規登録</p>
-
             <% end %>
 
 
             <%= link_to new_admin_session_path, class: 'nav-link text-dark' do %>
-
               <p class="border rounded">ログイン</p>
-
             <% end %>
 
           <div>
 
             <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+
+
+      <% end %>
 
 
 
@@ -109,12 +102,6 @@
       </div>
     </nav>
    </header>
-
-
-
-
-
-
   <main>
     <%= yield %>
   </main>
