--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,31 @@
 
         <% elsif customer_signed_in? %>
 
+         <%= link_to admin_items_path, class: 'nav-link text-dark' do %>
+              <p class="border rounded">商品一覧</p>
+            <% end %>
+
+
+            <%= link_to admin_customers_path, class: 'nav-link text-dark' do %>
+              <p class="border rounded">会員一覧</p>
+            <% end %>
+
+
+            <%= link_to admin_top_path, class: 'nav-link text-dark' do %>
+              <p class="border rounded">注文履歴一覧</p>
+            <% end %>
+
+
+            <%= link_to admin_genres_index_path, class: 'nav-link text-dark' do %>
+              <p class="border rounded">ジャンル一覧</p>
+            <% end %>
+
+            <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' do %>
+              <p class="border rounded">ログアウト</p>
+            <% end %>
+
+
+
         <% else %>
 
 
@@ -83,6 +108,9 @@
             <%= link_to new_admin_session_path, class: 'nav-link text-dark' do %>
               <p class="border rounded">ログイン</p>
             <% end %>
+
+
+
 
           <div>
 
