--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,10 +1,11 @@
 
-<main>
+
   <p id="notice"></p>
   <div class="container">
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">ジャンル編集</div>
 　　</div>
+　</div>
 
   <%= form_with model: @genre,url: admin_genre_path do |f| %>
 
