--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -17,6 +17,8 @@
       <div class="col-2">
         <%= f.file_field :image, accept: "image/*" %>
       </div>
+    </div>
+  </div>
 
 
 
@@ -30,7 +32,7 @@
       <%= f.text_field :name, placeholder: "商品名" %>
       </div>
     </div>
-  </div
+
 
 
 
