--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,63 @@
-<h2>Sign up</h2>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">新規会員登録</div>
+　　</div>
+　</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="container text-center">
+    <div class="row mb-3">
+      <div class="col-md">
+    <%= f.label :メールアドレス %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
+  </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="container text-center">
+    <div class="row mb-3">
+      <div class="col-md">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    (<%= @minimum_password_length %> 文字以上)
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
+  </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <div class="container text-center">
+    <div class="row mb-3">
+      <div class="col-md">
+    <%= f.label :パスワード %> (確認用)
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
   </div>
+  </div>
+
+
+<div class="container text-center">
+    <div class="row mb-3">
+      <div class="col-md">
+  <div class="actions">
+    <%= f.submit "新規登録", class: "btn btn-success" %>
+  </div>
+  </div>
+  </div>
+
+
 <% end %>
 
-<%= render "public/shared/links" %>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">既に登録済みの方</div>
+　　</div>
+　</div>
+
+
+<div><%= render "public/shared/links" %>からログインしてください。</div>
+</div>
