--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -8,14 +8,44 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="container text-center">
+ <div class="container text-center">
     <div class="row mb-3">
       <div class="col-md">
+
+  <%= f.label :名前 %>
+  (姓)<%= f.text_field :last_name_kana %>
+  (名)<%= f.text_field :first_name_kana %>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-md">
+      <%= f.label :フリガナ %>
+      <%= f.text_field :last_name %>
+      <%= f.text_field :first_name %>
+    </div>
+  </div>
+
+<div class="field">
     <%= f.label :メールアドレス %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-  </div>
-  </div>
+
+<div class="field">
+  <%= f.label :郵便番号 %>
+  <%= f.text_field :postal_code %>
+</div>
+
+<div class="field">
+  <%= f.label :住所 %>
+  <%= f.text_field :address %>
+</div>
+
+<div class="field">
+  <%= f.label :電話番号 %>
+  <%= f.text_field :telephon_number %>
+</div>
+
 
   <div class="container text-center">
     <div class="row mb-3">
@@ -54,7 +84,7 @@
 <p id="notice"></p>
   <div class="container">
     <div class="row">
-      <div class="p-3 mb-2 bg-secondary text-light">既に登録済みの方</div>
+      <div class="p-3 mb-2 bg-primary text-light">既に登録済みの方</div>
 　　</div>
 　</div>
 
