--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -13,16 +13,16 @@
       <div class="col-md">
 
   <%= f.label :名前 %>
-  (姓)<%= f.text_field :last_name_kana %>
-  (名)<%= f.text_field :first_name_kana %>
+  (姓)<%= f.text_field :last_name %>
+  (名)<%= f.text_field :first_name %>
     </div>
   </div>
 
   <div class="row mb-3">
     <div class="col-md">
       <%= f.label :フリガナ %>
-      <%= f.text_field :last_name %>
-      <%= f.text_field :first_name %>
+      <%= f.text_field :last_name_kana %>
+      <%= f.text_field :first_name_kana %>
     </div>
   </div>
 
