[Add]admin会員編集、注文一覧へ移動

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -9,6 +9,9 @@
 　　<tr>
      <td><%= customer.id %></td>
     </tr>
+    <% end %>
+    </tbody>
+
 
     <%= form_with model: @customer, url: admin_customer_path do |f| %>
 
