--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -6,7 +6,7 @@
 
 　<%= form_with model: @customer, url: admin_customer_path do |f| %>
 
-　 <div class="container">
+  <div class="container text-center">
     <div class="row mt-3 justify-content-center">
       <div class="col-2">
         会員ID
@@ -14,8 +14,69 @@
       <div clsdd="col-2">
         <%= @customer.id %>
       </div>
+    </div>
 
-      <div class="container">
+
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        氏名
+      </div>
+      <div class="col-2">
+        <%= @customer.last_name %>
+        <%= @customer.first_name %>
+       </div>
+    </div>
+
+
+
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        フリガナ
+      </div>
+      <div class="col-2">
+        <%= @customer.last_name_kana %>
+        <%= @customer.first_name_kana %>
+       </div>
+    </div>
+
+
+
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        郵便番号
+      </div>
+      <div class="col-2">
+        <%= @customer.postal_code %>
+       </div>
+    </div>
+
+
+
+
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        住所
+      </div>
+      <div class="col-2">
+        <%= @customer.address %>
+       </div>
+    </div>
+
+
+
+
+    <div class="row mt-3 justify-content-center">
+      <div class="col-2">
+        電話番号
+      </div>
+      <div class="col-2">
+        <%= @customer.telephon_number %>
+       </div>
+    </div>
+
+
+
+
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
         メールアドレス
@@ -24,31 +85,32 @@
         <%= @customer.email %>
       </div>
     </div>
-  </div>
 
-  <div class="container">
+
+
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
-        ステータス
+        会員ステータス
       </div>
       <div class="col-2">
         <% if @customer.is_deleted == false %>
-          有効
+          <p class="text-success">有効</p>
         <% else %>
-          退会
+          <p class="text-secondary">退会</p>
         <% end %>
       </div>
     </div>
-  </div>
 
-  <div class="container">
+
+
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
       <div><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-sm btn-success" %></div>
       </div>
-      <div><%= link_to "注文履歴一覧を見る", admin_orders_path(@customer.id), class: "btn btn-sm btn-primary" %></div>
+      <div><%= link_to "注文履歴一覧を見る", admin_top_path(@customer.id), class: "btn btn-sm btn-primary" %></div>
     </div>
   </div>
+ </div>
 
 
   <% end %>
