--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -20,7 +20,7 @@
     <% @customers.each do |customer| %>
     <tr>
       <td><%= customer.id %></td>
-      <td><%= link_to customer.last_name, admin_customer_path(customer.id) %></td>
+      <td><%= link_to customer.full_name, admin_customer_path(customer.id) %></td>
       <td><%= customer.email %></td>
       <td><% if customer.is_deleted == false %>
           <p class="text-success">有効</p>
