--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -43,7 +43,7 @@
 
 <div class="field">
   <%= f.label :電話番号 %>
-  <%= f.text_field :telephon_number %>
+  <%= f.text_field :telephone_number %>
 </div>
 
 
