--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -70,7 +70,7 @@
         電話番号
       </div>
       <div class="col-2">
-        <%= @customer.telephon_number %>
+        <%= @customer.telephone_number %>
        </div>
     </div>
 
