--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -18,3 +18,15 @@
     </thead>
 
 
+<% @orders.each do |order| %>
+  <tr>
+    <td><%= order.created_at %></td>
+    <td><%= order.customer_id %></td>
+
+<% @orderDetails.each do |orderDetail| %>
+    <td><%= orderDetail.amount %></td>
+
+
+<% end %>
+
+<% end %>
