--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -23,10 +23,13 @@
     <td><%= order.created_at %></td>
     <td><%= order.customer_id %></td>
 
-<% @orderDetails.each do |orderDetail| %>
-    <td><%= orderDetail.amount %></td>
+    <% @orderDetails.each do |orderDetail| %>
+      <td><%= orderDetail.amount %></td>
+    <% end %>
 
-
-<% end %>
+    <% @orders.each do |order| %>
+      <td><%= order.status_i18n %></td>
+    <% end %>
+  </tr>
 
 <% end %>
