[Add]顧客マイページ編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
 
         <% elsif customer_signed_in? %>
 
-         <%= link_to public_customers_path, class: 'nav-link text-dark' do %>
+         <%= link_to public_customer_path, class: 'nav-link text-dark' do %>
               <p class="border rounded">マイページ</p>
             <% end %>
 
