--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">会員情報編集</div>
+　　</div>
+　</div>
+
+　<%= form_with model: @customer, url: public_customer_path do |f| %>
+
+　<div class="container text-center">
+    <div class="row mb-3">
+      <div class="col-md">
+
