--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -11,7 +11,7 @@
         <strong>登録情報</strong>
       </div>
         <div class="col">
-        <%= link_to "編集する", edit_public_customers_path(@customer), class: "btn btn-sm btn-success" %>
+        <%= link_to "編集する", edit_public_customer_path, class: "btn btn-sm btn-success" %>
       </div>
     </div>
   </div>
@@ -19,7 +19,7 @@
 <div class="container">
     <div class="row mt-4 text-left">
 
-  <%= form_with model: @customer, url: edit_public_customers_path do |f| %>
+  <%= form_with model: @customer, url: edit_public_customer_path do |f| %>
 
 
 <table border="1" style="border-collapse: collapse">
@@ -80,7 +80,7 @@
         <strong>配送先</strong>
       </div>
       <div class="col-2">
-        <%= link_to "一覧を見る", public_addresses_path(@customer), class: "btn btn-sm btn-primary" %>
+        <%= link_to "一覧を見る", public_addresses_path, class: "btn btn-sm btn-primary" %>
       </div>
     </div>
   </div>
