--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -7,7 +7,45 @@
 
 　<%= form_with model: @customer, url: public_customer_path do |f| %>
 
-　<div class="container text-center">
-    <div class="row mb-3">
-      <div class="col-md">
 
+      <div class="form-group">
+        氏名
+        <%= f.text_field :last_name, placeholder: "姓" %>
+      <%= f.text_field :first_name, placeholder: "名" %>
+      </div>
+
+      <div class="form-group">
+        フリガナ
+      <%= f.text_field :last_name_kana, placeholder: "姓カナ" %>
+      <%= f.text_field :first_name_kana, placeholder: "名カナ" %>
+    </div>
+
+
+    <div class="form-group">
+       郵便番号
+      <%= f.text_field :postal_code %>
+    </div>
+
+
+    <div class="form-group">
+        住所
+      <%= f.text_field :address %>
+    </div>
+
+
+      <div class="form-group">
+        電話番号
+      <%= f.text_field :telephone_number %>
+   </div>
+
+
+    <div class="form-group">
+        メールアドレス
+      <%= f.text_field :email %>
+   </div>
+
+
+<div><%= f.submit "編集内容を保存", class: "btn btn-success" %></div>
+
+
+<% end %>
