--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,2 +1,17 @@
-<h1>Public::Customers#unsubscribe</h1>
-<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 mx-auto">
+            <div class="text-center"
+            <p>
+                <span>本当に退会しますか?</span><br>
+                退会すると、会員登録情報や</br>
+                これまでの購入履歴が閲覧できなくなります。</br>
+                退会する場合は、退会するをクリックしてください。</br>
+            </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
