--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -15,3 +15,8 @@
 
 <div class="container">
     <div class="row">
+      <div class="col">
+        <div class="text-center"
+      <div><%= link_to "退会しない", public_path, class: "btn btn-sm btn-primary" %></div>
+      </div>
+      </div>
