--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -24,4 +24,9 @@
 
 
 
+<div class="container">
+    <div class="row mt-3 justify-content-center">
 
+<%= image_tag "birthday-2901945__480.jpg", size: '450x300' %>
+  </div>
+</div>
